Update home page with relevant information

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Ethical Programmer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
 
   </head>
 
@@ -23,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Ethical Programmer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,10 +34,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link href="https://wiki.lghs.be/rnd:ethicalprogrammer">Wiki</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link href="mailto:istace.emmanuel@hotmail.com">Contact</a>
             </li>
           </ul>
         </div>
@@ -45,40 +46,43 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
-        <h1>Welcome to Scrolling Nav</h1>
-        <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+        <h1>Ethical Programmer</h1>
+        <p class="lead">Ethic for better software building a better world</p>
       </div>
     </header>
 
     <section id="about">
       <div class="container">
         <div class="row">
+		
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+            <h2>About Ethical Programmer</h2>
+            <p class="lead">Ethical Programmer is a movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
+            It's still a work in progress and you're welcom to join us if you want:</p>
             <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+              <li>Give input about the ethic and want to be involved in the creation of chart</li>
+              <li>Share to your environmenet</li>
+              <li>Us to give conference call at your events about ethical programming</li>
               <li>Minimal custom CSS so you are free to explore your own unique design options</li>
             </ul>
+            <center><a href="https://wiki.lghs.be/rnd:ethicalprogrammer"><h2>Discover our wiki</h2></a><center>  
           </div>
         </div>
+		<div class="row">
+		
       </div>
     </section>
 
-    <section id="services" class="bg-light">
+    <!--<section id="services" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Services we offer</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contact">
+     <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -87,12 +91,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; ethicalprogrammer.org 2018</p>
       </div>
       <!-- /.container -->
     </footer>
