--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav" collapseOnSelect>
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Ethical Programmer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +34,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link href="https://wiki.lghs.be/rnd:ethicalprogrammer">Wiki</a>
+              <a class="nav-link" href="https://wiki.lghs.be/rnd:ethicalprogrammer">Wiki</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link href="mailto:istace.emmanuel@hotmail.com">Contact</a>
+              <a class="nav-link" href="mailto:istace.emmanuel@hotmail.com">Contact</a>
             </li>
           </ul>
         </div>
