--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
             <p class="lead">Ethical Programmer is a movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
             It's still a work in progress and you're welcom to join us if you want:</p>
             <ul>
-              <li>Give input about the ethic and want to be involved in the creation of chart</li>
-              <li>Share to your environmenet</li>
-              <li>Us to give conference call at your events about ethical programming</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+              <li>We are open to any input about the ethic and project</li>
+              <li>We'll be eternally greatfull if you share to your environmenet</li>
+              <li>If you want us to give conference call at your events about ethical programming</li>
             </ul>
             <center><a href="https://wiki.lghs.be/rnd:ethicalprogrammer"><h2>Discover our wiki</h2></a><center>  
           </div>
