--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Emmanuel Istace">
 
     <title>Ethical Programmer</title>
 
@@ -32,6 +32,9 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#social">Social</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://wiki.lghs.be/rnd:ethicalprogrammer">Wiki</a>
@@ -64,22 +67,25 @@
               <li>We'll be eternally greatfull if you share to your environmenet</li>
               <li>If you want us to give conference call at your events about ethical programming</li>
             </ul>
+			<hr />			
             <center><a href="https://wiki.lghs.be/rnd:ethicalprogrammer"><h2>Discover our wiki</h2></a><center>  
           </div>
         </div>
-		<div class="row">
-		
-      </div>
     </section>
 
-    <!--<section id="services" class="bg-light">
+    <section id="social" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
+			<h2>Why no social butttons ?</h2>
+            <p class="lead">Websites uses those kind of social features to track you so we've decided to not include them. Anyway, if you want to share this page, do it, we'll be pleased to</p>
+			<p>You can learn more about that on <a href="https://www.gnu.org/proprietary/proprietary-surveillance.en.html">GNU Proprietary Surveillance article</a>
           </div>
         </div>
       </div>
     </section>
+	
+	<!--
 
      <section id="contact">
       <div class="container">
