--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="row">
 		
           <div class="col-lg-8 mx-auto">
-            <h2>About Ethical Programmer</h2>
-            <p class="lead">Ethical Programmer is a movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
+            <h2>About Us</h2>
+            <p class="lead">The Ethical Programmer movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
             It's still a work in progress and you're welcom to join us if you want:</p>
             <ul>
               <li>We are open to any input about the ethic and project</li>
