--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
 		
           <div class="col-lg-8 mx-auto">
             <h2>About Us</h2>
-            <p class="lead">The Ethical Programmer movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
+            <p class="lead">The Ethical Programmer 
+			movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
             It's still a work in progress and you're welcom to join us if you want:</p>
             <ul>
               <li>We are open to any input about the ethic and project</li>
-              <li>We'll be eternally greatfull if you share to your environmenet</li>
-              <li>If you want us to give conference call at your events about ethical programming</li>
+              <li>We'll be eternally greatfull if you share this project to your environmenet</li>
+              <li>If you want us to give conference at your events about ethical programming</li>
             </ul>
 			<hr />			
             <center><a href="https://wiki.lghs.be/rnd:ethicalprogrammer"><h2>Discover our wiki</h2></a><center>  
