--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<h2>Why no social butttons ?</h2>
             <p class="lead">Websites uses those kind of social features to track you so we've decided to not include them. Anyway, if you want to share this page, do it, we'll be pleased to</p>
 			<p>You can learn more about that on <a href="https://www.gnu.org/proprietary/proprietary-surveillance.en.html">GNU Proprietary Surveillance article</a>
-			<p>Also, we don't track any of your activity on this website and don't use cookies</p>
+			<p>Also, we don't track any of your activity on this website and don't use cookies to track you.</p>
           </div>
         </div>
       </div>
