--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <h2>About Us</h2>
             <p class="lead">The Ethical Programmer 
 			movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
-            It's still a work in progress and you're welcom to join us if you want:</p>
+            It's still a work in progress and you're welcome to join us if you want:</p>
             <ul>
               <li>We are open to any input about the ethic and project</li>
-              <li>We'll be eternally greatfull if you share this project to your environmenet</li>
+              <li>We'll be eternally greatfull if you share this project to your environment</li>
               <li>If you want us to give conference at your events about ethical programming</li>
             </ul>
 			<hr />			
@@ -78,8 +78,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-			<h2>Why no social butttons ?</h2>
-            <p class="lead">Websites uses those kind of social features to track you so we've decided to not include them. Anyway, if you want to share this page, do it, we'll be pleased to</p>
+			<h2>Why no social buttons ?</h2>
+            <p class="lead">Websites use those kinds of social features to track you so we've decided not to include them. Anyway, if you want to share this page, do it, we'll be pleased if you do</p>
 			<p>You can learn more about that on <a href="https://www.gnu.org/proprietary/proprietary-surveillance.en.html">GNU Proprietary Surveillance article</a>
 			<p>Also, we don't track any of your activity on this website and don't use cookies to track you.</p>
           </div>
