--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <h2>About Us</h2>
             <p class="lead">The Ethical Programmer 
 			movement started in 2018 in Liège, Belgium, Europe, at the Liege Hackerspace.
+			The goal is to responsabilize developers and companies about solutions they develop.
             It's still a work in progress and you're welcome to join us if you want:</p>
             <ul>
               <li>We are open to any input about the ethic and project</li>
