clarification, add page to refer to wiki, the wiki itself is not the ethicalprogrammer wiki.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <li>If you want us to give conference at your events about ethical programming</li>
             </ul>
 			<hr />			
-            <center><a href="https://wiki.lghs.be/rnd:ethicalprogrammer"><h2>Discover our wiki</h2></a><center>  
+            <center><a href="https://wiki.lghs.be/rnd:ethicalprogrammer"><h2>Discover our wiki page</h2></a><center>  
           </div>
         </div>
     </section>
