--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="A hub for ethical programmer">
     <meta name="author" content="Emmanuel Istace">
-  <meta name="keywords" content="ethical,programming,programmer,software,ethical programmer, ethical programming, ethical sofwtare">
+	<meta name="keywords" content="ethical,programming,programmer,software,ethical programmer, ethical programming, ethical sofwtare">
 
     <title>Ethical Programmer</title>
 
@@ -16,7 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 
   </head>
 
@@ -51,7 +51,7 @@
     <header class="bg-primary text-white">
       <div class="container text-center">
         <h1>Ethical Programmer</h1>
-        <p class="lead">Ethic for better software building a better world</p>
+        <h2><p class="lead">Ethic for better software building a better world</p><h2>
       </div>
     </header>
 
