--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
+	  <img src="img/LogoEthicalProgrammer.png">
         <h1>Ethical Programmer</h1>
         <h2><p class="lead">Ethic for better software building a better world</p><h2>
       </div>
