--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     </nav>
 
     <header class="bg-primary text-white">
-      <div class="container text-center">
-	  <img src="img/LogoEthicalProgrammer.png">
+      <div class="container text-center">            
+	  <object type="image/svg+xml" data="img/logo.svg" width="300">
+            </object>
         <h1>Ethical Programmer</h1>
         <h2><p class="lead">Ethic for better software building a better world</p><h2>
       </div>
