--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	  <object type="image/svg+xml" data="img/logo.svg" width="300">
             </object>
         <h1>Ethical Programmer</h1>
-        <h2><p class="lead">Ethic for better software building a better world</p><h2>
+        <h2><p class="lead">Ethic for a better world through software</p><h2>
       </div>
     </header>
 
