--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   </head>
 
