quekques détails mis a jours

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 
   </head>
 
@@ -50,10 +50,10 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">            
-	  <object type="image/svg+xml" data="img/logo.svg" width="300">
+	  <object type="image/svg+xml" data="img/logo.svg" width="300" style="margin-bottom: 55px;">
             </object>
         <h1>Ethical Programmer</h1>
-        <h2><p class="lead">Ethic for a better world through software</p><h2>
+        <h2><p class="lead">Ethic for better software developer building a better world</p><h2>
       </div>
     </header>
 
