--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; ethicalprogrammer.org 2018</p>
+        <p class="m-0 text-center text-white">Copyleft MIT Licence &copy; ethicalprogrammer.org 2018</p>
       </div>
       <!-- /.container -->
     </footer>
